# apify-crypto-skill

./: .coderabbit.yaml  .gitignore  CLAUDE.md  CODE_PRINCIPLES.md  README.md  crypto-skill.skill  pyproject.toml
crypto-skill/: SKILL.md
crypto-skill/references/: api-reference.md
crypto-skill/scripts/: install.sh  pyproject.toml
crypto-skill/scripts/crypto_skill/: client.py  constants.py  exceptions.py  kucoin.py
docs/superpowers/plans/: 2026-03-16-crypto-skill-implementation.md
docs/superpowers/specs/: 2026-03-16-crypto-skill-architecture-design.md
openspec/: config.yaml
src/crypto_skill/: __init__.py  client.py  coingecko.py  constants.py  exceptions.py  kucoin.py  models.py
tests/: conftest.py  test_client.py  test_coingecko.py  test_exceptions.py  test_init.py  test_kucoin.py  test_models.py
